deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: phabricator
  name: phabricator
  labels:
    app: phabricator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phabricator
  template:
    metadata:
      labels:
        app: phabricator
    spec:
      containers:
      - name: phabricator
        image: bitnami/phabricator:latest
        ports:
        - containerPort: 8082
        resources:
          limits:
            cpu: 2
            memory: 8Gi
        volumeMounts:
          - name: phabricator-data-pvc
            mountPath: /bitnami
        livenessProbe:
            exec:
              command:
              - /bin/bash
              - -c
              - curl -s 'https://HOSTNAME/status/' | grep -i "ALIVE" > /dev/null
            initialDelaySeconds: 300
            timeoutSeconds: 10
            failureThreshold: 3
            periodSeconds: 60
      - name: phabricator-mariadb
        image: bitnami/mariadb:latest
        ports:
        - containerPort: 3306
        resources:
          limits:
            cpu: 2
            memory: 8Gi
        volumeMounts:
          - name: phabricator-mariadb-pvc
            mountPath: /bitnami
      volumes:
      - name: phabricator-data-pvc
        persistentVolumeClaim:
          claimName: phabricator-data-pvc
      - name: phabricator-mariadb-pvc
        persistentVolumeClaim:
          claimName: phabricator-mariadb-pvc
